[tool.poetry]
name = "time-tracker-cli"
version = "0.0.1"
description = "time-tracker-cli is a Python script that allows you to track the time spent working in your projects or tasks."
license = "MIT"
authors = [
    "pazitos10 <pazosbruno@gmail.com>"
]

readme = 'README.md'

repository = "https://github.com/pazitos10/time-tracker-cli"
homepage = "https://github.com/pazitos10/time-tracker-cli"

keywords = ['time', 'tracking', 'productivity', 'time tracking']

[tool.poetry.dependencies]
python = "^3.6"
toml = "^0.9"

[tool.poetry.scripts]
time-tracker-cli = 'time_tracker_cli:main'